ultimos cambios de sincrozadores

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
 <!-- CSS Part End-->
 </head>
 <body>
-  <div class="wrapper-wide">
+<div class="wrapper-wide">
+
   <app-root></app-root>
  <!-- Twitter Side Block Start -->
   <div id="twitter_footer" class="twit-right sort-order-1">
@@ -58,7 +59,7 @@
 <script type="text/javascript" src="assets/js/datetimepicker/moment.js"></script>
 <script type="text/javascript" src="assets/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
 <script type="text/javascript" src="assets/js/custom.js"></script>
-<script type="text/javascript"><!--
+<script type="text/javascript">
 $('.date').datetimepicker({
   pickTime: false
 });
