--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="assets/image/favicon.png" rel="icon" />
 <title>Bremsen</title>
-<meta name="description" content="Responsive and clean html template design for any kind of ecommerce webshop">
+<meta name="description" content="Bremsen, venta de neumáticos">
 <!-- CSS Part Start-->
 <link rel="stylesheet" type="text/css" href="assets/js/bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="assets/css/font-awesome/css/font-awesome.min.css" />
@@ -24,7 +24,11 @@
 <script type="text/javascript" src="assets/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery.easing-1.3.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery.dcjqaccordion.min.js"></script>
+
 <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="assets/js/owl.carousel.js"></script>
+
+
 <script type="text/javascript" src="assets/js/custom.js"></script>
 <!-- CSS Part End-->
 </head>
